# wholegraph

./: .clang-tidy  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.sh  build_component.sh  dependencies.yaml
cpp/: CMakeLists.txt  Doxyfile
cpp/bench/: CMakeLists.txt
cpp/bench/wholememory_ops/: block_count_gather.cu  gather_scatter_bench.cu  old_gather.cuh
cpp/include/wholememory/: device_reference.cuh  embedding.h  env_func_ptrs.h  global_reference.h  graph_op.h  tensor_description.h  wholegraph_op.h  wholememory.h  wholememory_op.h  wholememory_tensor.h
cpp/src/: cuda_macros.cpp  cuda_macros.hpp  error.hpp  logger.cpp  logger.hpp  parallel_utils.cpp  parallel_utils.hpp
cpp/src/graph_ops/: append_unique.cpp  append_unique_func.cuh  append_unique_impl.cu  append_unique_impl.h  csr_add_self_loop.cpp  csr_add_self_loop_func.cuh  csr_add_self_loop_impl.cu  csr_add_self_loop_impl.h  edge_weight_softmax.cpp  edge_weight_softmax_func.cuh  edge_weight_softmax_impl.cu  edge_weight_softmax_impl.h  gspmm_csr_weighted.cpp  gspmm_csr_weighted_func.cuh  gspmm_csr_weighted_impl.cu  gspmm_csr_weighted_impl.h  spadd_gat_csr.cpp  spadd_gat_csr_func.cuh  spadd_gat_csr_impl.cu  spadd_gat_csr_impl.h  spmm_csr_no_weight.cpp  spmm_csr_no_weight_func.cuh  spmm_csr_no_weight_impl.cu  spmm_csr_no_weight_impl.h
cpp/src/raft/comms/: nccl_comms.hpp
cpp/src/raft/core/: cu_macros.hpp
cpp/src/rmm/: pinned_buffer.hpp  pinned_uvector.hpp
cpp/src/wholegraph_ops/: block_radix_topk.cuh  raft_random_gen.cpp  sample_comm.cuh  unweighted_sample_without_replacement.cpp  unweighted_sample_without_replacement_func.cuh  unweighted_sample_without_replacement_impl.h  unweighted_sample_without_replacement_impl_mapped.cu  weighted_sample_without_replacement.cpp  weighted_sample_without_replacement_func.cuh  weighted_sample_without_replacement_impl.h  weighted_sample_without_replacement_impl_mapped.cu
cpp/src/wholememory/: communicator.cpp  communicator.hpp  embedding.cpp  embedding.hpp  embedding_cache.cpp  embedding_cache.hpp  embedding_optimizer.cpp  embedding_optimizer.hpp  env_func_ptrs.cpp  env_func_ptrs.hpp  file_io.cpp  file_io.h  global_reference.cpp  initialize.cpp  initialize.hpp  integer_utils.hpp  memory_handle.cpp  memory_handle.hpp  nccl_comms.cpp  nccl_comms.hpp  tensor_description.cpp  wholememory.cpp  wholememory_tensor.cpp
cpp/src/wholememory_ops/: gather_op.cpp  gather_op_impl.h  gather_op_impl_mapped.cu  gather_op_impl_nccl.cu  gather_scatter_func.cuh  output_memory_handle.hpp  raft_random.cuh  register.hpp  scatter_op.cpp  scatter_op_impl.h  scatter_op_impl_mapped.cu  scatter_op_impl_nccl.cu  temp_memory_handle.hpp  thrust_allocator.cpp  thrust_allocator.hpp  wholememory_test_op.cu
cpp/src/wholememory_ops/functions/: bucket_ids_func.cu  bucket_ids_func.h  embedding_cache_func.cu  embedding_cache_func.cuh  embedding_cache_func.h  embedding_optimizer_func.cu  embedding_optimizer_func.h  exchange_embeddings_nccl_func.cu  exchange_embeddings_nccl_func.h  exchange_ids_nccl_func.cu  exchange_ids_nccl_func.h  gather_cached_func.cu  gather_cached_func.h  gather_func.cu  gather_func_impl_floating_data_int32_indices.cu  gather_func_impl_floating_data_int64_indices.cu  gather_func_impl_integer_data_int32_indices.cu  gather_func_impl_integer_data_int64_indices.cu  gather_scatter_func.cuh  gather_scatter_func.h  scatter_func.cu  scatter_func_impl_floating_data_int32_indices.cu  scatter_func_impl_floating_data_int64_indices.cu  (+2 more)
cpp/tests/: CMakeLists.txt  parallel_utils_tests.cpp
cpp/tests/graph_ops/: append_unique_test_utils.cu  append_unique_test_utils.hpp  append_unique_tests.cu  csr_add_self_loop_tests.cu  csr_add_self_loop_utils.cu  csr_add_self_loop_utils.hpp  edge_weight_softmax_backward_tests.cu  edge_weight_softmax_forward_tests.cu  edge_weight_softmax_test_utils.cu  edge_weight_softmax_test_utils.hpp  gspmm_csr_weighted_backward_tests.cu  gspmm_csr_weighted_forward_tests.cu  gspmm_csr_weighted_test_utils.cu  gspmm_csr_weighted_test_utils.hpp  spadd_gat_csr_backward_tests.cu  spadd_gat_csr_forward_tests.cu  spadd_gat_csr_utils.cu  spadd_gat_csr_utils.hpp  spmm_csr_no_weight_backward_tests.cu  spmm_csr_no_weight_test.cu  spmm_csr_no_weight_utils.cu  spmm_csr_no_weight_utils.hpp
cpp/tests/rmm/: pinned_buffer_tests.cu  pinned_uvector_tests.cpp
cpp/tests/wholegraph_ops/: graph_sampling_test_utils.cu  graph_sampling_test_utils.hpp  wholegraph_csr_unweighted_sample_without_replacement_tests.cu  wholegraph_csr_weighted_sample_without_replacement_tests.cu
cpp/tests/wholememory/: wholememory_comm_tests.cpp  wholememory_handle_tests.cpp  wholememory_tensor_tests.cpp  wholememory_test_utils.hpp
cpp/tests/wholememory_ops/: cacheset_tests.cu  embedding_test_utils.cu  embedding_test_utils.hpp  wholememory_embedding_gradient_apply_tests.cu  wholememory_embedding_tests.cu  wholememory_gather_tests.cu  wholememory_scatter_tests.cu
pylibwholegraph/: CMakeLists.txt  setup.py
pylibwholegraph/cpp/: pylibwholegraph_ext.cpp  wholegraph_functions.cpp  wholegraph_types.cpp
pylibwholegraph/examples/: node_classfication.py
pylibwholegraph/pylibwholegraph/binding/: CMakeLists.txt  wholegraph_ops_binding.pyx  wholememory_binding.pyx
pylibwholegraph/pylibwholegraph/test_utils/: test_comm.py
pylibwholegraph/pylibwholegraph/torch/: __init__.py  comm.py  common_options.py  data_loader.py  distributed_launch.py  dlpack_utils.py  embedding.py  gnn_model.py  graph_ops.py  graph_structure.py  initialize.py  tensor.py  utils.py  wholegraph_env.py  wholegraph_ops.py  wholememory_ops.py
pylibwholegraph/pylibwholegraph/utils/: multiprocess.py
pylibwholegraph/tests/pylibwholegraph/: test_wholememory_binding.py  test_wholememory_io.py  test_wholememory_tensor.py
pylibwholegraph/wholegraph_torch/: CMakeLists.txt  torch_env_func_ptrs.cpp  torch_env_func_ptrs.h  torch_utils.cpp  torch_utils.h
pylibwholegraph/wholegraph_torch/ops/: gather_scatter_ops.cpp  raft_ramdom_generator_ops.cpp  test_raft_random.cuh  unweighted_sample_without_replacement_ops.cpp  weighted_sample_without_replacement_ops.cpp
(+43 files in other folders)
